# haskMus

./: .ghci  .gitignore  .hlint  .hlint.yaml  .travis.yml  CHANGELOG.md  TAGS  build.sh  cabal.haskell-ci  fourmolu.yaml  hasMusic.cabal  haskMus.cabal  haskell-ci.sh  hie.yaml  justfile  readme.md  shell.nix  stack.yaml  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: build-workflow.yml  cache-workflow.yml  hadolint.yml  haskell-ci.yml  haskell.yml  lint-format-workflow.yml  lint.yml  setup-workflow.yml  stack.yml
app/: Main.hs
bench/: Main.hs
bench-archive/: bench2.html
md/: IIR.dump-ds  wave.md
musicxml-examples/: nested-tuplets.json  nested-tuplets.xml
old/: RtmProperties.hs  TSSpec.hs
old/src/Music/Pitch/: Accidental.hs
old/src/Music/Time/: TS.hs  Tree.hs
old/src/Parsers/: RtmParser.hs
sketch/: rtm.hs
src/: OM.hs  Pitch.hs  Selector.hs  TestXml.hs  ToXML.hs
src/Data/: WAVE.hs
src/Music/Pitch/: Accidental.hs  Pitch.hs
src/Music/Time/: RT.hs  Rtm.hs  TS.hs  Tree.hs
src/Parsers/: RtmParser.hs
src/Pitch/: Accidental.hs  Hz.hs  Interval.hs  LilyPitch.hs  Parser.hs  Pitch.hs  PitchClass.hs  PitchLike.hs  QuasiQuoter.hs  Scale.hs
src/Reactive/: Event.hs
src/Rtm/: Common.hs  Parser.hs  QuasiQuoter.hs  Rtm.hs  Shape.hs
src/SimpleDSP/: IIR.hs  IO.hs  Samples.hs
src/Text/XML/: Writer.hs
src/Time/: Dur.hs  Duration.hs  Pattern.hs  SeqDur.hs  SimpleDuration.hs  TimeSignature.hs
src/TinyDSP/: IIR.hs  IO.hs  Samples.hs
src/Util/: Fraction.hs  Math.hs  MathDuration.hs  Rand.hs
test/: AccidentalProperties.hs  PitchProperties.hs  PitchSpec.hs  RtmProperties.hs  TSSpec.hs  Test.hs
