cabal-version:       2.2

name:                hasMusic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hasMusic#readme
-- license:             GPL-3.0-or-later
-- license-file:        license
author:              bernardo barros
maintainer:          example@example.com
copyright:           2023 Bernardo Barros
category:            music
-- build-type:          Simple
-- extra-source-files:  readme.md
--                      changelog.md

tested-with:
  GHC==9.4.7

library
  hs-source-dirs:      src
  exposed-modules:     
    Music.Pitch.Accidental
    Music.Pitch.Pitch
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , lens
                     , hspec
                     , doctest
                     , QuickCheck 
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable hasMusic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hasMusic
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hasMusic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       AccidentalProperties
                     , PitchSpec
                     , PitchProperties
  build-depends:       base
                     , hasMusic
                     , hspec
                     , lens
                     , HUnit
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N


source-repository head
  type:     git
  location: https://github.com/smoge/hasMusic
