cabal-version:       2.2

name:                hasMusic
version:             0.1.0.0
synopsis:            algorithm composition toolkit in haskell
description:         algorithm composition toolkit in haskell
homepage:            https://github.com/githubuser/hasMusic#readme
license:             GPL-3.0-or-later
--license-file:        license
author:              bernardo barros
maintainer:          example@example.com
copyright:           2023 Bernardo Barros
category:            music
build-type:          Simple
-- build-type:          Simple
-- extra-source-files:  readme.md
--                      changelog.md

tested-with:
  GHC==9.4.7

library
  hs-source-dirs:      src
  exposed-modules:     
    Music.Pitch.Accidental
    Music.Pitch.Pitch
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6.7 && < 0.7
                     , text >= 2.0.2 && < 2.1
                     , lens >= 5.2.3 && < 5.3
                     , hspec  >= 2.11.6 && < 2.12
                     , doctest >= 0.22.2 && < 0.23
                     , QuickCheck >= 2.14.3 && < 2.15
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable hasMusic-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , hasMusic
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite hasMusic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       AccidentalProperties
                     , PitchSpec
                     , PitchProperties
  build-depends:       base
                     , hasMusic
                     , hspec >= 2.11.6 && < 2.12
                     , lens >= 5.2.3 && < 5.3
                     , HUnit >= 1.6.2 && < 1.7
                     , test-framework >= 0.8.2 && < 0.9
                     , test-framework-quickcheck2 >= 0.3.0.5 && < 0.4
                     , QuickCheck >= 2.14.3 && < 2.15
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N


source-repository head
  type:     git
  location: https://github.com/smoge/hasMusic
