cabal-version: 2.2
name:          haskMus
version:       0.1.0.0
synopsis:      algorithm composition toolkit in haskell
description:
    Algorithm composition toolkit library and DSL designed creation, manipulation, of music structures.

homepage:      https://github.com/smoge/haskMus#readme
license:       GPL-3.0-or-later

--license-file:        license
author:        bernardo barros
maintainer:    example@example.com
copyright:     2023 Bernardo Barros
category:      music
build-type:    Simple

-- extra-source-files:  readme.md
--                      changelog.md

tested-with:   GHC >=9.4 && <9.5 || >=9.6 && <9.7

library
    hs-source-dirs:     src
    exposed-modules:
        Data.WAVE
        Pitch.Accidental
        Pitch.Hz
        Pitch.LilyPitch
        Pitch.Parser
        Pitch.Pitch
        Pitch.QuasiQuoter
        Pitch.PitchLike
        Pitch.Scale
        Rtm.Common
        Rtm.Parser
        Rtm.QuasiQuoter
        Rtm.Shape
        TinyDSP.IIR
        TinyDSP.IO
        TinyDSP.Samples
        Text.XML.Writer
        Time.Dur
        Time.Duration
        Time.SimpleDuration
        Time.TimeSignature
        ToXML
        Util.Fraction
        Util.MathDuration
        Util.Rand
        Time.Pattern
        Selector

    build-depends:
        , base                >=4.17 && <4.20
        , bytestring
        , containers
        , data-default
        , dlist
        , doctest
        , extra
        , filepath
        , hspec
        , HUnit
        , lens
        , linear
        , mtl
        , neat-interpolation
        , parseargs
        , parsec
        , pretty-simple
        , QuickCheck
        , random-shuffle
        , safe
        , template-haskell
        , text
        , these
        , transformers
        , typed-process
        , vector
        , xml-conduit
        , xml-types
        , megaparsec
        , random
        , random-fu
        , time
        , deepseq
        , clock
        , stm 
        , array
        --, csound-expression
        , hosc
        , hsc3
        --, vivid
        , tf-random
        , non-empty
        , MonadRandom
    --, vector-space
    --    , rando
    --    , random-fu
    --  , bimap >= 0.5.0 && < 0.6
    --  , markov-chain >= 0.0.3 && < 0.1
    --, witch
    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DisambiguateRecordFields
        DuplicateRecordFields
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTSyntax
        GADTs
        GeneralizedNewtypeDeriving
        ImportQualifiedPost
        InstanceSigs
        LambdaCase
        LambdaCase
        OverloadedLists
        OverloadedRecordDot
        OverloadedStrings
        OverloadedStrings
        PartialTypeSignatures
        PolyKinds
        PostfixOperators
        QuasiQuotes
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        StrictData
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        TypeSynonymInstances
        UnicodeSyntax

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -fdiagnostics-color=always -fprint-typechecker-elaboration -msse4.2

executable haskMus-exe
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:
        , base
        , haskMus

    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DisambiguateRecordFields
        DuplicateRecordFields
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTSyntax
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        LambdaCase
        OverloadedLists
        OverloadedStrings
        PolyKinds
        PostfixOperators
        QuasiQuotes
        RankNTypes
        ScopedTypeVariables
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UnicodeSyntax

    ghc-options:
        -funbox-strict-fields -fforce-recomp -Wall -Wcompat
        -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns
        -Wmissing-export-lists -threaded -with-rtsopts=-N
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

test-suite haskMus-test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Test.hs
    other-modules:
        AccidentalProperties
        PitchProperties
        PitchSpec

    build-depends:
        , base                        >=4.17 && <4.20
        , haskMus
        , hspec
        , HUnit
        , lens
        , QuickCheck
        , test-framework
        , test-framework-hunit
        , test-framework-quickcheck2
        , text

    default-language:   Haskell2010
    default-extensions:
        AllowAmbiguousTypes
        DataKinds
        DefaultSignatures
        DeriveDataTypeable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DisambiguateRecordFields
        DuplicateRecordFields
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        GADTSyntax
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        LambdaCase
        OverloadedLists
        OverloadedStrings
        PolyKinds
        PostfixOperators
        QuasiQuotes
        RankNTypes
        ScopedTypeVariables
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UnicodeSyntax

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints


--  -ddump-to-file
-- -dsuppress-coercions
-- -dsupress-module-prefixes
-- -ddump-ds
-- -ddump-spec
-- -ddump-simpl
-- -dverbose-core2core

source-repository head
    type:     git
    location: https://github.com/smoge/haskMus

benchmark haskMus-benchmarks
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-record-updates
        -Wincomplete-uni-patterns -Wmissing-export-lists
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
        -rtsopts -threaded -with-rtsopts=-N

    build-depends:
        , base
        , criterion
        , haskMus
        , text

    default-language: Haskell2010
